Add Dockerfile and add Readme.md